--- a/DoLEMON.new/Main.storyboard
+++ b/DoLEMON.new/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="18122" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="Ahh-c0-JqV">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="18122" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="Gk5-fi-cCL">
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="18093"/>
@@ -50,6 +50,77 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="K73-6s-dfN" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="1971" y="1612"/>
+        </scene>
+        <!--View Controller-->
+        <scene sceneID="MUq-QO-dBD">
+            <objects>
+                <viewController id="HIA-jc-nIR" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="hDh-c3-HR5">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="GcI-ht-p1N">
+                                <rect key="frame" x="57" y="337" width="292" height="162"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <color key="backgroundColor" red="0.92156862750000001" green="0.57254901960000004" blue="0.74509803919999995" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <fontDescription key="fontDescription" type="boldSystem" pointSize="30"/>
+                                <state key="normal" title="Button">
+                                    <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                </state>
+                                <connections>
+                                    <segue destination="090-Vc-yBf" kind="show" id="v0l-ae-uvm"/>
+                                </connections>
+                            </button>
+                        </subviews>
+                        <viewLayoutGuide key="safeArea" id="M8Z-av-aIt"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                    </view>
+                    <navigationItem key="navigationItem" id="StR-c4-G2d"/>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="BYE-zV-CIq" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="4610.144927536232" y="1169.8660714285713"/>
+        </scene>
+        <!--Edit Profile View Controller-->
+        <scene sceneID="okD-3W-Ix7">
+            <objects>
+                <viewController id="090-Vc-yBf" customClass="EditProfileViewController" customModule="DoLEMON_new" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="C5V-bg-i56">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="cSw-Wk-X0e">
+                                <rect key="frame" x="0.0" y="88" width="414" height="774"/>
+                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                <prototypes>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="cell" id="hHl-aF-ZAl">
+                                        <rect key="frame" x="0.0" y="24.5" width="414" height="43.5"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="hHl-aF-ZAl" id="LGk-Rw-1nX">
+                                            <rect key="frame" x="0.0" y="0.0" width="414" height="43.5"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                        </tableViewCellContentView>
+                                    </tableViewCell>
+                                </prototypes>
+                            </tableView>
+                        </subviews>
+                        <viewLayoutGuide key="safeArea" id="0Xx-XC-PBH"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstItem="cSw-Wk-X0e" firstAttribute="top" secondItem="0Xx-XC-PBH" secondAttribute="top" id="0yx-pP-u4U"/>
+                            <constraint firstItem="0Xx-XC-PBH" firstAttribute="bottom" secondItem="cSw-Wk-X0e" secondAttribute="bottom" id="8gK-Cn-rT2"/>
+                            <constraint firstItem="cSw-Wk-X0e" firstAttribute="leading" secondItem="0Xx-XC-PBH" secondAttribute="leading" id="EVr-tq-7se"/>
+                            <constraint firstItem="0Xx-XC-PBH" firstAttribute="trailing" secondItem="cSw-Wk-X0e" secondAttribute="trailing" id="h87-3I-3jY"/>
+                        </constraints>
+                    </view>
+                    <navigationItem key="navigationItem" id="Aun-yg-jxN"/>
+                    <connections>
+                        <outlet property="tableView" destination="cSw-Wk-X0e" id="5je-Li-j60"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="UFv-Pp-FgU" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="4610" y="1904"/>
         </scene>
         <!--Map View Controller-->
         <scene sceneID="Q1W-ur-fIo">
@@ -140,6 +211,24 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="lpv-uA-PGT" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="1972" y="907"/>
+        </scene>
+        <!--Navigation Controller-->
+        <scene sceneID="DVI-Ca-95y">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="Gk5-fi-cCL" sceneMemberID="viewController">
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="vf7-u3-MFn">
+                        <rect key="frame" x="0.0" y="44" width="414" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="HIA-jc-nIR" kind="relationship" relationship="rootViewController" id="MpM-Ev-Cjg"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="mo7-YB-I6J" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="3700.0000000000005" y="1169.8660714285713"/>
         </scene>
     </scenes>
     <resources>
