--- a/DoLEMON.new/Main.storyboard
+++ b/DoLEMON.new/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="18122" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="Ahh-c0-JqV">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="18122" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="NcF-Si-8bX">
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="18093"/>
@@ -80,6 +80,75 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="BYE-zV-CIq" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="4610.144927536232" y="1169.8660714285713"/>
+        </scene>
+        <!--View Controller-->
+        <scene sceneID="JYI-YJ-iNQ">
+            <objects>
+                <viewController id="tl3-3y-Yct" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="8cp-bM-87d">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="2qh-9I-bxY">
+                                <rect key="frame" x="0.0" y="88" width="414" height="774"/>
+                                <color key="backgroundColor" systemColor="systemYellowColor"/>
+                                <fontDescription key="fontDescription" type="system" weight="heavy" pointSize="30"/>
+                                <state key="normal" title="Button">
+                                    <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                </state>
+                                <connections>
+                                    <segue destination="8Q5-IP-ksm" kind="show" id="l9t-wl-9KW"/>
+                                </connections>
+                            </button>
+                        </subviews>
+                        <viewLayoutGuide key="safeArea" id="oi4-rq-zxr"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstItem="oi4-rq-zxr" firstAttribute="bottom" secondItem="2qh-9I-bxY" secondAttribute="bottom" id="3hh-f2-9ps"/>
+                            <constraint firstItem="oi4-rq-zxr" firstAttribute="trailing" secondItem="2qh-9I-bxY" secondAttribute="trailing" id="QDu-gz-7y5"/>
+                            <constraint firstItem="2qh-9I-bxY" firstAttribute="top" secondItem="oi4-rq-zxr" secondAttribute="top" id="RyQ-LT-63X"/>
+                            <constraint firstItem="2qh-9I-bxY" firstAttribute="leading" secondItem="oi4-rq-zxr" secondAttribute="leading" id="m3M-bh-ze3"/>
+                        </constraints>
+                    </view>
+                    <navigationItem key="navigationItem" id="aqO-xy-xkQ"/>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="gsb-Ky-BWo" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="7644.9275362318849" y="1226.7857142857142"/>
+        </scene>
+        <!--Demo Table View Controller-->
+        <scene sceneID="4bI-WI-i8W">
+            <objects>
+                <tableViewController id="8Q5-IP-ksm" customClass="DemoTableViewController" customModule="DoLEMON_new" customModuleProvider="target" sceneMemberID="viewController">
+                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" id="kEC-we-LzC">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <searchBar key="tableHeaderView" contentMode="redraw" id="an7-bf-nIW">
+                            <rect key="frame" x="0.0" y="0.0" width="414" height="44"/>
+                            <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
+                            <textInputTraits key="textInputTraits"/>
+                        </searchBar>
+                        <prototypes>
+                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" id="ffa-td-mgy">
+                                <rect key="frame" x="0.0" y="68.5" width="414" height="43.5"/>
+                                <autoresizingMask key="autoresizingMask"/>
+                                <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="ffa-td-mgy" id="bDs-Zq-9yn">
+                                    <rect key="frame" x="0.0" y="0.0" width="414" height="43.5"/>
+                                    <autoresizingMask key="autoresizingMask"/>
+                                </tableViewCellContentView>
+                            </tableViewCell>
+                        </prototypes>
+                        <connections>
+                            <outlet property="dataSource" destination="8Q5-IP-ksm" id="Wtu-ir-dgj"/>
+                            <outlet property="delegate" destination="8Q5-IP-ksm" id="fei-3h-mDd"/>
+                        </connections>
+                    </tableView>
+                    <navigationItem key="navigationItem" id="iaN-kh-dat"/>
+                </tableViewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="Csg-bP-27R" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="7645" y="1983"/>
         </scene>
         <!--Edit Profile View Controller-->
         <scene sceneID="okD-3W-Ix7">
@@ -230,12 +299,33 @@
             </objects>
             <point key="canvasLocation" x="3700.0000000000005" y="1169.8660714285713"/>
         </scene>
+        <!--Navigation Controller-->
+        <scene sceneID="ixD-Ee-6we">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="NcF-Si-8bX" sceneMemberID="viewController">
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="gam-ZS-88d">
+                        <rect key="frame" x="0.0" y="44" width="414" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="tl3-3y-Yct" kind="relationship" relationship="rootViewController" id="V5K-Ux-zlz"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="S66-aY-GWT" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="6734.7826086956529" y="1226.7857142857142"/>
+        </scene>
     </scenes>
     <resources>
         <image name="mappin.and.ellipse" catalog="system" width="118" height="128"/>
         <image name="person.fill" catalog="system" width="128" height="120"/>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+        </systemColor>
+        <systemColor name="systemYellowColor">
+            <color red="1" green="0.80000000000000004" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </systemColor>
     </resources>
 </document>
