--- a/DoLEMON.new/Main.storyboard
+++ b/DoLEMON.new/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="18122" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="NcF-Si-8bX">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="18122" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="Xyv-Qy-JJD">
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="18093"/>
@@ -51,7 +51,7 @@
             </objects>
             <point key="canvasLocation" x="1971" y="1612"/>
         </scene>
-        <!--View Controller-->
+        <!--EditProfileViewController-->
         <scene sceneID="MUq-QO-dBD">
             <objects>
                 <viewController id="HIA-jc-nIR" sceneMemberID="viewController">
@@ -75,11 +75,11 @@
                         <viewLayoutGuide key="safeArea" id="M8Z-av-aIt"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                     </view>
-                    <navigationItem key="navigationItem" id="StR-c4-G2d"/>
+                    <navigationItem key="navigationItem" title="EditProfileViewController" id="StR-c4-G2d"/>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="BYE-zV-CIq" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="4610.144927536232" y="1169.8660714285713"/>
+            <point key="canvasLocation" x="4609" y="68"/>
         </scene>
         <!--View Controller-->
         <scene sceneID="JYI-YJ-iNQ">
@@ -114,7 +114,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="gsb-Ky-BWo" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="7644.9275362318849" y="1226.7857142857142"/>
+            <point key="canvasLocation" x="7457" y="68"/>
         </scene>
         <!--Demo Table View Controller-->
         <scene sceneID="4bI-WI-i8W">
@@ -148,7 +148,7 @@
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Csg-bP-27R" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="7645" y="1983"/>
+            <point key="canvasLocation" x="7457" y="907"/>
         </scene>
         <!--Edit Profile View Controller-->
         <scene sceneID="okD-3W-Ix7">
@@ -189,7 +189,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="UFv-Pp-FgU" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="4610" y="1904"/>
+            <point key="canvasLocation" x="4607" y="907"/>
         </scene>
         <!--Map View Controller-->
         <scene sceneID="Q1W-ur-fIo">
@@ -223,7 +223,7 @@
                 </tabBarController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="0md-WZ-Y71" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1532" y="171"/>
+            <point key="canvasLocation" x="1532" y="68"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="c42-vH-MPk">
@@ -297,7 +297,7 @@
                 </navigationController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="mo7-YB-I6J" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="3700.0000000000005" y="1169.8660714285713"/>
+            <point key="canvasLocation" x="3681" y="68"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="ixD-Ee-6we">
@@ -315,7 +315,7 @@
                 </navigationController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="S66-aY-GWT" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="6734.7826086956529" y="1226.7857142857142"/>
+            <point key="canvasLocation" x="6303" y="68"/>
         </scene>
     </scenes>
     <resources>
