currentUser判定をしてonboardigをスキップできるようにした

--- a/DoLEMON.new/Views/Main.storyboard
+++ b/DoLEMON.new/Views/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="18122" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="NcF-Si-8bX">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="18122" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="Xyv-Qy-JJD">
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="18093"/>
@@ -116,10 +116,10 @@
             </objects>
             <point key="canvasLocation" x="3841" y="68"/>
         </scene>
-        <!--Demo Table View Controller-->
+        <!--Follow List Table View Controller-->
         <scene sceneID="4bI-WI-i8W">
             <objects>
-                <tableViewController id="8Q5-IP-ksm" customClass="DemoTableViewController" customModule="DoLEMON_new" customModuleProvider="target" sceneMemberID="viewController">
+                <tableViewController id="8Q5-IP-ksm" customClass="FollowListTableViewController" customModule="DoLEMON_new" customModuleProvider="target" sceneMemberID="viewController">
                     <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" id="kEC-we-LzC">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -210,7 +210,7 @@
         <!--Tab Bar Controller-->
         <scene sceneID="Y5j-k4-XMG">
             <objects>
-                <tabBarController storyboardIdentifier="tab" id="Ahh-c0-JqV" sceneMemberID="viewController">
+                <tabBarController storyboardIdentifier="rootVC" id="Ahh-c0-JqV" customClass="TabBarController" sceneMemberID="viewController">
                     <tabBar key="tabBar" tag="1" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="eqt-oI-7KR">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="49"/>
                         <autoresizingMask key="autoresizingMask"/>
@@ -228,7 +228,7 @@
         <!--Navigation Controller-->
         <scene sceneID="c42-vH-MPk">
             <objects>
-                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="Xyv-Qy-JJD" sceneMemberID="viewController">
+                <navigationController storyboardIdentifier="homeVC" automaticallyAdjustsScrollViewInsets="NO" id="Xyv-Qy-JJD" sceneMemberID="viewController">
                     <toolbarItems/>
                     <navigationBar key="navigationBar" contentMode="scaleToFill" id="WWK-sZ-naj">
                         <rect key="frame" x="0.0" y="44" width="414" height="44"/>
@@ -284,7 +284,7 @@
         <!--Navigation Controller-->
         <scene sceneID="DVI-Ca-95y">
             <objects>
-                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="Gk5-fi-cCL" sceneMemberID="viewController">
+                <navigationController storyboardIdentifier="editProfileVC" automaticallyAdjustsScrollViewInsets="NO" useStoryboardIdentifierAsRestorationIdentifier="YES" id="Gk5-fi-cCL" sceneMemberID="viewController">
                     <toolbarItems/>
                     <navigationBar key="navigationBar" contentMode="scaleToFill" id="vf7-u3-MFn">
                         <rect key="frame" x="0.0" y="44" width="414" height="44"/>
