ピンの色をcurrentUserとそれ以外で変えた

--- a/DoLEMON.new/Views/Main.storyboard
+++ b/DoLEMON.new/Views/Main.storyboard
@@ -26,7 +26,7 @@
         <!--Profile View Controller-->
         <scene sceneID="wVv-62-gTR">
             <objects>
-                <viewController id="F64-Ax-i56" customClass="ProfileViewController" customModule="DoLEMON_new" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="profileVC" id="F64-Ax-i56" customClass="ProfileViewController" customModule="DoLEMON_new" customModuleProvider="target" sceneMemberID="viewController">
                     <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" id="MVP-W6-GUj">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
